[project]
name = "forced-neckdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kicad-python @ https://gitlab.com/kicad/code/kicad-python.git",
    "shapely>=2.0.7",
    "svgpathtools>=1.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pytest>=8.3.4",
]
