[project]
name = "breakneck"
version = "0.2.0"
description = "Stitching via visualization and manual forced neckdowns for KiCad"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kicad-python >= 0.2.0",
    "loguru>=0.7.3",
    "shapely>=2.0.7",
    "svgpathtools>=1.6.1",
]

[project.scripts]
breakneck = "breakneck.cli:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pytest>=8.3.4",
]

[tool.uv]
package = true
